ServiceEntry-and-WorkloadEntry/02-Workload-Entry/02-serviceentry-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: nginx-external
spec:
  hosts:
  - nginx.magedu.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 8091
  location: MESH_EXTERNAL
  # NONE, STATIC, DNS, DNS_ROUND_ROBIN
  resolution: STATIC
  workloadSelector:
    labels:
      app: nginx
